# gas

./: README.md  gas.py  pyproject.toml  requirements.txt
agents/: agent.py  prompt.py
config/: agents.json
pages/: conversation.py  roles.py
src/: gas.py  gas_event.py
src/agents/: agent.py
src/config/: agents.json  projects.json
src/core/: __init__.py  agent.py  project_manager.py  prompt.py  tools.py
src/data/agents/: product_owner.toml  scrum_master.toml
src/pages/: add_event.py  add_project.py  agent_templates.py  conduct_event.py  conversation.py  project_view.py  roles.py
src/templates/: README.md  agent_template.json  agent_template.toml  agents.json  event_template.toml  events.json  project_template.toml
src/utils/: agent_load.py  event_load.py
